--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
   <script src="js/app.js"></script>
 </head>
+</head>
 <body>
-    <div class="mih">
-        <div class="fed">
-            <input class="search-input" type="text" placeholder="Enter Search Term">
-            <button class="search-trigger" type="textbutton">Search</button>
-            <div class="list-container"></div>
-            <div class="item-container"></div>
-            <div class="loading-container">Loading</div>
-            <div class="error-container">Error</div>
-        </div>
+
+    <div class="mih-fed-gitget">
+        <input class="search-input" type="text" placeholder="Enter Search Term">
+        <button class="search-trigger" type="textbutton">Search</button>
+        <div class="details-container"></div>
+        <div class="list-container"></div>
+        <div class="loading-container">Loading</div>
+        <div class="error-container">Error</div>
     </div>
+
 </body>
 </html>
